@@ -7,6 +7,7 @@
 	<UUID>{F9D7CE3E-0D22-495B-ABDE-C0F19F799488}</UUID>
 	<Files>
 		<File ID="default_xxm" UnitName="default_xxm1" UnitPath=""><Path>Default.xxm</Path></File>
+		<!-- un-comment this line to force auto-compile when working on xxmp.pas -->
+		<Resource><Path>xxmp.pas</Path></Resource>
 	</Files>
-	<LastModified>2011-04-29T21:36:09</LastModified>
 </XxmWebProject>
